--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- Data download need prefetch as all JSON size sum will exceeded 10mb -->
+    <link rel="prefetch" href="./data/chapter-01.json?v=0.2.1" />
+    <link rel="prefetch" href="./data/chapter-13.json?v=0.2.1" />
+    <link rel="prefetch" href="./data/chapter-14.json?v=0.2.1" />
+    <link rel="prefetch" href="./data/chapter-15.json?v=0.2.1" />
+    <link rel="prefetch" href="./data/chapter-16.json?v=0.2.1" />
+    <link rel="prefetch" href="./data/transitory-provisions.json?v=0.2.1" />
+    <link rel="prefetch" href="./data/constitution.json?v=0.2.1" />
+    <link rel="prefetch" href="./data/minutes.json?v=0.2.1" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
