--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
   <head>
   
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PJNJXZGN60"></script>
